--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ pest = "2.7.15"
 pest_derive = "2.7.15"
 scalarff = "0.8.1"
 serde = { version = "1.0.217", features = ["derive"], optional = true }
+serde_json = "1.0.135"
